--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- 파비콘 설정 -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> <!-- Normalize CSS -->
+    <!-- CSS 정규화를 위한 Normalize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <!-- 반응형 웹을 위한 뷰포트 설정 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
   <body>
+    <!-- React 애플리케이션이 마운트될 루트 요소 -->
     <div id="root"></div>
+    <!-- 메인 JavaScript 진입점 -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
