--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <!-- 반응형 웹을 위한 뷰포트 설정 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TUZAIN test</title>
+    <title>투자인</title>
   </head>
   <body>
     <!-- React 애플리케이션이 마운트될 루트 요소 -->
